--- a/API_PROJETO/front/package.json
+++ b/API_PROJETO/front/package.json
@@ -15,14 +15,18 @@
     "@types/axios": "^0.9.36",
     "axios": "^1.12.2",
     "fetch": "^1.1.0",
+    "html5-qrcode": "^2.3.8",
+    "jsqr": "^1.4.0",
     "next": "15.5.3",
     "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "react-dom": "19.1.0",
+    "recharts": "^3.2.1"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/recharts": "^1.8.29",
     "typescript": "^5"
   }
 }
